@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-06-09T02:00:56Z",
-  "count" : 283,
+  "timestamp" : "2022-06-09T08:31:33Z",
+  "count" : 182,
   "count_minmax" : [ 120, 351 ],
-  "count_decinc" : [ -68, +351 ],
+  "count_decinc" : [ -169, +351 ],
   "uniques" : 1,
   "uniques_minmax" : [ 1, 1 ],
   "uniques_decinc" : [ -0, +1 ]
