@@ -1,0 +1,9 @@
+{
+  "timestamp" : "2022-06-09T08:31:33Z",
+  "count" : 121,
+  "count_minmax" : [ 121, 121 ],
+  "count_decinc" : [ -0, +121 ],
+  "uniques" : 2,
+  "uniques_minmax" : [ 2, 2 ],
+  "uniques_decinc" : [ -0, +2 ]
+}
