@@ -1,13 +1,13 @@
 {
-  "timestamp" : "2022-06-09T02:00:56Z",
+  "timestamp" : "2022-06-09T08:31:33Z",
   "count_outdated" : 26559,
   "uniques_outdated" : 598,
-  "count" : 31442,
-  "uniques" : 634,
+  "count" : 31462,
+  "uniques" : 636,
   "clones" : [
     {
       "timestamp": "2022-05-26T00:00:00Z",
-      "count": 283,
+      "count": 182,
       "count_minmax": [ 120, 351 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
@@ -100,6 +100,13 @@
       "timestamp": "2022-06-08T00:00:00Z",
       "count": 353,
       "count_minmax": [ 121, 353 ],
+      "uniques": 2,
+      "uniques_minmax": [ 2, 2 ]
+    },
+    {
+      "timestamp": "2022-06-09T00:00:00Z",
+      "count": 121,
+      "count_minmax": [ 121, 121 ],
       "uniques": 2,
       "uniques_minmax": [ 2, 2 ]
     }
